syntax = "proto3";

package openapi;

option java_package = "com.webull.openapi.quotes.internal.grpc.proto";

service Quote {

  rpc StreamRequest (stream ClientRequest) returns (stream ClientResponse)  {}

  rpc Request(ClientRequest) returns (ClientResponse) {}
}

message ClientRequest {
  MsgType type = 1;
  string requestId = 2;
  string path = 3;
  bytes payload = 4;
}

message ClientResponse {
  MsgType type = 1;
  string requestId = 2;
  uint32 code = 3;
  string msg = 4;
  string path = 5;
  bytes payload = 6;
}

enum MsgType {
  Ping = 0;
  Pong = 1;
  Payload = 2;
  Complete = 3;
  Cancel = 4;
  Downgrade = 5;
}